@@ -2,6 +2,7 @@
 
 	* ALL parser: add support for ExtLib IO channels
 	  Thanks Pietro Abate for the patch. (Closes: #299)
+	* ALL add Cudf.mem_package (Closes: #307)
 
 2010-06-25  Stefano Zacchiroli  <zack@pps.jussieu.fr>
 
